packages/typ/tests/fixtures/diagnostics/0709_fcm_package_function_call_mismatch_05.ml.infer.expected
File "0709_fcm_package_function_call_mismatch_05.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0709_fcm_package_function_call_mismatch_05 is not a valid module name.

File "0709_fcm_package_function_call_mismatch_05.ml", line 8, characters 8-12:
8 |   X.run true
            ^^^^
Error: The constructor true has type bool
       but an expression was expected of type X.t
